--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,6 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="TestTheme" parent="android:Theme.Material" />
+    <style name="TestTheme" parent="Theme.AppCompat.NoActionBar" />
 
 </resources>
